<resources>
    <!-- Landing Screen -->
    <string name="app_name">TxtMsgLanDroid</string>
    <string name="large_text">
        "Text Message Daemon For Android.\n\n"
        "SMS messages will be forwarded to the user account configured in the settings.\n\n"
        "Press the button to send a test message.\n\n"
    </string>

    <!-- About -->
    <string name="action_about">About This App</string>
    <string name="about_text">
        "Text Message Daemon For Android.\n\n"
        "SMS messages will be forwarded to the user account configured in the settings.\n\n"
        "Press the button to send a test message.\n\n"
    </string>

    <!-- Refresh / Polling -->
    <string name="action_refresh">Refresh</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_username">Username</string>
    <string name="pref_default_username">Username</string>
    <string name="pref_title_password">Password</string>
    <string name="pref_default_password">Password</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Servers -->
    <string name="pref_header_servers">Servers</string>
    <string name="pref_title_servers">Servers</string>
    <string name="pref_description_servers">Manage accepted servers and add new ones</string>

    <string name="pref_server_network_name">Network Name</string>
    <string name="pref_server_address">Server Address</string>
    <string name="pref_server_connect_automatically">Connect Automatically</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>1 minute</item>
        <item>2 minutes</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>1</item>
        <item>2</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>-1</item>
    </string-array>
    <string name="pref_sync_auto_adjust">Auto-Adjust Sync Frequency</string>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
